<resources>
    <string name="app_name">My Application</string>

    <string name="welcome">Welcome</string>
    <string name="email">Email</string>
    <string name="example_email">example@samsung.com</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="or">or</string>

    <string name="register_title">Registration</string>
    <string name="nickname">Nickname</string>
    <string name="enter_nick">Enter your nickname</string>
    <string name="city">City</string>
    <string name="enter_city">Moscow</string>
    <string name="passwordConfirm">Password Confirmation</string>
    <string name="pass_hint">Your pass</string>
    <string name="signUp">Sign up</string>

</resources>